# llm-chat-sf

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.cfg
chat_llm_snowflake/: asgi.py  settings.py  urls.py  wsgi.py
