[tool.poetry]
name = "chat-llm-snowflake"
version = "0.1.0"
description = "A backend for llm based snowflake data"
authors = ["Ayush Singh <sendmailtoayush@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
djangorestframework = "^3.14.0"
django = "^4.2.6"
pre-commit = "^3.5.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"